# Slams_and_Bams

./: .gitignore  build-android.js  build-installer.js  build-win-installer.js  electron-main.js  index.html  keystore-generator.js  package-lock.json  package.json  session_logs.txt  zip-macos.js  zip-win-portable.js
.github/workflows/: build-mac.yml  build-macos.yml
android-project/: settings.gradle.kts
android-project/app/: build.gradle.kts  release.keystore
android-project/app/src/androidTest/java/com/example/phyzixsnb/ui/main/: MainScreenTest.kt
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/example/phyzixsnb/: MainActivity.kt  Navigation.kt  NavigationKeys.kt
android-project/app/src/main/java/com/example/phyzixsnb/data/: DataRepository.kt
android-project/app/src/main/java/com/example/phyzixsnb/theme/: Color.kt  Theme.kt  Type.kt
android-project/app/src/main/java/com/example/phyzixsnb/ui/main/: MainScreen.kt  MainScreenViewModel.kt
android-project/app/src/main/res/values/: strings.xml  themes.xml
android-project/app/src/test/java/com/example/phyzixsnb/ui/main/: MainScreenViewModelTest.kt
build-assets/: WindowsInstaller.cs  WindowsUninstaller.cs  build-mac-installer.sh  distribution.xml
src/: App.jsx  Knob.jsx  WebPluginBridge.js  audioEngine.js  index.css  midi.js  midiExport.js
src-plugin/: CMakeLists.txt  PhyzixPluginWrapper.cpp  PhyzixPluginWrapper.cpp.bak  build-vst.bat
